# TastyAlgorithm

./: CMakeLists.txt  README.md
TastyAlgorithm/: CMakeLists.txt
TastyAlgorithm/include/: TDetermineMinPoint.hpp  TDetermineZeroPoint.hpp  TExtra.hpp  TFunction.hpp  TPolynomial.hpp  TSort.hpp
TastyAlgorithm/src/: TConstantValue.cpp  TDetermineMaxPoint.cpp  TDetermineMinPoint.cpp  TDetermineZeroPoint.cpp  TExtra.cpp  TFunction.cpp  TPolynomial.cpp  TSort.cpp
Test/: CMakeLists.txt  Link.hpp  Test.cpp  TestTConstantValue.cpp  TestTDetermineMaxPoint.cpp  TestTExtra.cpp  TestTFunction.cpp  TestTPolynomial.cpp  TestTSort.cpp
include/: TConstantValue.hpp  TDetermineExtremePoint.hpp  TDetermineMaxPoint.hpp  TDetermineMinPoint.hpp  TDetermineZeroPoint.hpp  TExtra.hpp  TFunction.hpp  TLinearEquation.hpp  TMatrix.hpp  TPolynomial.hpp  TSort.hpp
src/: TConstantValue.cpp  TDetermineExtremePoint.cpp  TDetermineMaxPoint.cpp  TDetermineMinPoint.cpp  TDetermineZeroPoint.cpp  TExtra.cpp  TFunction.cpp  TLinearEquation.cpp  TMatrix.cpp  TPolynomial.cpp  TSort.cpp  main.cpp
test/: Link.hpp  Test.cpp  TestTDetermineMinPoint.cpp  TestTDetermineZeroPoint.cpp  TestTExtra.cpp  TestTFunction.cpp  TestTMatrix.cpp  TestTSort.cpp
